tests/doc_examples/valid/bucket.md_example_1/main.w
// This file was auto generated from an example found in: bucket.md_example_1
// Example metadata: {"valid":true}
bring cloud;

let bucket = new cloud.Bucket(
  public: true, // optional, defaults to `false`
);
